feat: add webhook host for continuous deployment

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ FB_PASSWORD=...  # hash of the password for the filebrowser interface (bcrypt)
 LOGGER_WEBHOOK=...
 OPENWEATHERMAP_API_KEY=...
 OPENAI_API_KEY=...
+DEPLOY_SECRET=...
