--- a/compose.yml
+++ b/compose.yml
@@ -1,41 +1,16 @@
 services:
   fisa-bot:
-    image: airopi/tsp-bot:latest
+    image: ghcr.io/fisa-telecom-sudparis/another-tsp-bot:master
     user: "1000:1000"
     build:
       context: .
-      dockerfile: ./Dockerfile
-      target: production
+      dockerfile: $PWD/Dockerfile
     env_file:
       - .env
     tty: true
     init: true
     restart: always
     volumes:
-      - ./data:/app/data
-      - ./resources:/app/resources
-      - ./config.toml:/app/config.toml
-      - ./external_data:/app/external_data
-    develop:
-      watch:
-        - action: sync
-          path: ./src
-          target: /app
-        - action: rebuild
-          path: ./uv.lock
-        - action: rebuild
-          path: ./config.toml
-        - action: rebuild
-          path: ./.env
-
-  filebrowser:
-    image: hurlenko/filebrowser
-    user: "1000:1000"
-    volumes:
-      - ./external_data:/data
-      - ./filebrowser_config:/config
-    env_file:
-      - .env
-    restart: always
-    expose:
-      - 8080
+      - $PWD/data:/app/data
+      - $PWD/config.toml:/app/config.toml
+      - $PWD/external_data:/app/external_data
