--- a/webhook/hooks.yml
+++ b/webhook/hooks.yml
@@ -1,5 +1,5 @@
 - id: deploy
-  execute-command: "/app/bin/deploy.sh"
+  execute-command: "/app/bin/watchtower-update.sh"
   command-working-directory: "/app"
   trigger-rule:
     match:
