refactor: separate deploy from the rest

--- a/deploy/compose.caddy.yml
+++ b/deploy/compose.caddy.yml
@@ -9,6 +9,6 @@ services:
       - "443:443"
       - "443:443/udp"
     volumes:
-      - $PWD/Caddyfile:/etc/caddy/Caddyfile
-      - $PWD/data/caddy_data:/data
-      - $PWD/caddy_config:/config
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - ./caddy_data:/data
+      - ./caddy_config:/config
