--- a/deploy/compose.yml
+++ b/deploy/compose.yml
@@ -1,15 +1,18 @@
 name: "another-tsp-bot"
 
+include:
+  - ./compose.caddy.yml
+  - ./compose.filebrowser.yml
+  - ./compose.webhook.yml
+
 services:
-  fisa-bot:
+  mp2i-bot:
     container_name: fisa-bot
+    image: ghcr.io/fisa-telecom-sudparis/another-tsp-bot:master
+    user: "1000:1000"
     init: true
     tty: true
     restart: no
-    build:
-      target: debug
-      context: .
-      dockerfile: $PWD/Dockerfile
     ports:
       - 5678:5678
     env_file:
