--- a/deploy/compose.filebrowser.yml
+++ b/deploy/compose.filebrowser.yml
@@ -7,7 +7,6 @@ services:
     expose:
       - 8080
     volumes:
-      - ${PWD}/external_data:/data
-      - ${PWD}/filebrowser_config:/config
+      - ./filebrowser_config/:/config/
     env_file:
-      - ${PWD}/.env
+      - .env
